# nyc_tlc_de_lab

./: .gitignore  01_download_raw.py  02_profile_source.py  02a_observation_and_hypothesis.md  02b_verify_hypotheses.py  02c_table_of_cleansing.md  03_upload_raw_to_s3.py  04_clean_to_processed.py  04_transform.py  eda_yellow_trip_data.ipynb  main.py  pyproject.toml
docs/: table_of_cleansing.md
notebooks/: eda_yellow_trip_data.ipynb
src/: __init__.py  download.py  transform.py  validate.py
trash/: 02_profile_dirt.py  02a_observation_and_hypotheses.md  02b_verify_hypotheses.py
